<resources>
    <string name="app_name">CicloDias</string>
    <string name="txtLogin">Login</string>
    <string name="txtEmail">Email</string>
    <string name="txtPassword">Palavra-passe</string>
    <string name="txtBtEntrar">Entrar</string>
    <string name="txtBtRegistar">Ainda não é membro? Registe-se aqui</string>
    <string name="txtRegisto">Registo</string>
    <string name="txtBtRegistarse">Registar-se</string>
    <string name="txtConfirmarPassword">Confirmar Palavra-passe</string>
    <string name="txtAtividadeTotalUtilizador">Atividade Total do Utilizador</string>
    <string name="txtNomeUtilizador">Nome de Utilizador</string>
    <string name="txtDataNascimento">Data de Nascimento</string>
    <string name="txtBtGuardarAlteracoes">Guardar Alterações</string>
    <string name="txtDistancia">Distância: </string>
    <string name="txtVelocidadeMedia">Velocidade Média: </string>
    <string name="txtVelocidadeMediaInProgress">Velocidade Média</string>
    <string name="txtVelocidadeMaxima">Velocidade Máxima: </string>
    <string name="txtVelocidadeMaximaInProgress">Velocidade Máxima</string>
    <string name="txtDuracao">Duração: </string>
    <string name="txtDuracaoInProgress">Duração</string>
    <string name="txtVelInstantanea">Velocidade Instantânea</string>
    <string name="txtVelInstantaneaInProgress">Velocidade Instantânea: </string>
    <string name="txtNomeCompleto">Nome Completo</string>
    <string name="txtTreino">Treino</string>
    <string name="txtBtComecarTreino">Começar</string>
    <string name="txtPausa">Pausa</string>
    <string name="txtBtRetomarTreino">Retomar</string>
    <string name="txtBtTerminarTreino">Terminar</string>
    <string name="txtResumoTreino">Resumo do Treino</string>
    <string name="txtErrorEmail">O email inserido não é válido</string>
    <string name="txtErrorEmailDuplicado">O email inserido já existe</string>
    <string name="txtErrorUsernameDuplicado">O nome de utilizador inserido já existe</string>
    <string name="txtErrorConfirmarPassword">As palavra-chaves inseridas não são iguais</string>
    <string name="txtErrorPasswordTamanho">A palavra-chave tem que ter pelo menos 8 caracteres</string>
    <string name="txtErrorValidacao">Ocorreu um erro a fazer a validação dos dados</string>
    <string name="txtErrorCampoVazio">Campo obrigatório</string>
    <string name="txtUsername">Username</string>
    <string name="txtBtGuardar">Guardar</string>
    <string name="txtBtSair">Sair</string>
    <string name="tvSessaoTreino">Sessão de Treino</string>
    <string name="txtDistanciaPercorrida">Distância Percorrida</string>
    <string name="txtBtMapa">Mapa</string>
    <string name="txtGPSAdquirido">GPS Adquirido</string>
    <string name="txtGuardadoSucesso">Guardado com Sucesso</string>
    <string name="txtGuardadoSemSucesso">As alterações não foram guardadas</string>
    <string name="txtPermissaoExplicacao">A aplicação necessita de acesso á localização</string>
    <string name="txtPermissaoNãoDada">Tem que permitir que a aplicação utilize a localização</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiaXVyaWNhcnJhcyIsImEiOiJja3V3aDJrZWEwNjhuMm5xd3hqNHRuODdiIn0.Yztl8wZEMrxIlkEVwt1zgw</string>
    <string name="txtDialog">dialog</string>
    <string name="txtGPSPorAdquirir">GPS por Adquirir</string>
    <string name="title_activity_in_progress_training_map">InProgressTrainingMapActivity</string>
    <string name="txtBtVoltar">Voltar</string>
    <string name="txtNomeAtividade">Nome da Atividade: </string>
    <string name="txtExemplo">Exemplo</string>
    <string name="no_internet">Sem ligação á Internet</string>
    <string name="login_invalido">Dados Inseridos para login Inválidos</string>
    <string name="txtPrimeiroNome">Primeiro Nome</string>
    <string name="txtUltimoNome">Ultimo Nome</string>
    <string name="txtHintNomeTreino">Indique o nome do treino</string>
    <string name="txtCiclismoNaoRemovido">Não foi possivel apagar o treino</string>
    <string name="txtCiclismoRemovido">Treino apagado com sucesso</string>
    <string name="txtUserNaoRemovido">Erro a apagar o Utilizador</string>
    <string name="txtUserRemovido">Utilizador apagado com sucesso</string>
    <string name="channel_name">mosquitto</string>
    <string name="channel_description">canal do mosquitto</string>
    <string name="txtBtPublicar">Publicar</string>
</resources>
