<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PausedTrainingActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtPausa"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btRetomarTreinoPausa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/green_700"
        android:text="@string/txtBtRetomarTreino"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btTerminarTreinoPausa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/green_700"
        android:text="@string/txtBtTerminarTreino"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvTempoPausa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/txtTempo"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tvDistanciaPausa"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvDistanciaPausa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="40dp"
        android:text="@string/txtDistancia"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btRetomarTreinoPausa"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvVelMediaPausa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/txtVelocidadeMedia"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tvDistanciaPausa"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/tvDistanciaPausa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/tvVelMaxPausa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="40dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btTerminarTreinoPausa"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/txtVelMaxima" />
</androidx.constraintlayout.widget.ConstraintLayout>